<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity"
    android:padding="16dp"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/cardview_dark_background"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_avatar"
                android:layout_width="92dp"
                android:layout_height="92dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:civ_border_width="4dp"
                app:civ_border_color="@color/md_theme_light_onPrimary"
                tools:src="@tools:sample/avatars"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/md_theme_light_onPrimary"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="@tools:sample/first_names"
                />

            <TextView
                android:id="@+id/tv_nik"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/md_theme_light_onPrimary"
                android:textStyle="normal"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                app:layout_constraintStart_toEndOf="@id/iv_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="3578291710010101"
                />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/md_theme_light_onPrimary"
                android:textStyle="normal"
                android:textSize="12sp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_nik"
                app:layout_constraintStart_toEndOf="@id/iv_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="examplemail@domain.com"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:text="@string/ubah_profil"
                android:textSize="11sp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_email"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/md_theme_light_primary"
        app:layout_constraintTop_toBottomOf="@id/cv_profile"
        app:layout_constraintBottom_toTopOf="@id/cv_verification"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_verification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/md_theme_light_primary"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/cv_profile">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_verifikasi_wajah"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/verifikasi_wajah"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/md_theme_light_onPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/tv_deskripsi_wajah"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi_wajah"
                android:textSize="12sp"
                android:textStyle="normal"
                android:textColor="@color/md_theme_light_onPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_verifikasi_wajah"
                />

            <Button
                android:id="@+id/btn_verifikasi"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:text="@string/verifikasi_wajah_title"
                android:textSize="11sp"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/md_theme_dark_onSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_deskripsi_wajah"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/md_theme_light_primary"
        app:layout_constraintTop_toBottomOf="@id/cv_verification"
        app:layout_constraintBottom_toTopOf="@id/tv_layanan_pemerintah"/>

    <TextView
        android:id="@+id/tv_layanan_pemerintah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/layanan_pemerintah"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/cv_verification"
        />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_layanan_pemerintah">

        <Button
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:text="layanan"
            />
        <Button
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:text="layanan"
            />
        <Button
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:text="layanan"
            />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>